--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background: #d1f3d1; /* Light green background similar to TEB */
+    background: #cce7ff; /* Açık mavi arka plan */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -112,10 +112,6 @@ body {
 }
 
 .login-button:hover {
-    background-color: #3399ff; /* Slightly darker blue for hover effect */
-}
-
-.login-button:hover {
     background-color: #005bb5; /* Darker blue for hover effect */
 }
 
@@ -147,7 +143,7 @@ body {
 
 @media (prefers-color-scheme: light) {
     body {
-        background-color: #d1f3d1; /* Light green background */
+        background-color: #cce7ff; /* Açık mavi arka plan */
         color: #333;
     }
 
@@ -194,7 +190,7 @@ body {
 
 @media (prefers-color-scheme: dark) {
     body {
-        background-color: #d1f3d1; /* Light green background */
+        background-color: #cce7ff; /* Açık mavi arka plan */
         color: #fff;
     }
 
